WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129656
Subpixel rendering: Wrong cliprect on absolute positioned elements.
https://bugs.webkit.org/show_bug.cgi?id=129656
Summary
Subpixel rendering: Wrong cliprect on absolute positioned elements.
alan
Reported
2014-03-03 20:47:12 PST
<html> <head> <style> div { position: absolute; border: red solid 1px; width: 20px; height: 20px; left: 0.1px; top: 0px; } </style> </head> <body> <div id=foo></div> <script> pos = 0.3; function move() { document.getElementById("foo").style.left = pos; } setTimeout(move,500); </script> </body> </html>
Attachments
test
(329 bytes, text/html)
2014-03-03 20:47 PST
,
alan
no flags
Details
Patch
(9.12 KB, patch)
2014-03-04 12:02 PST
,
alan
simon.fraser
: review-
Details
Formatted Diff
Diff
Patch
(9.10 KB, patch)
2014-03-04 19:03 PST
,
alan
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-02 for mac-mountainlion
(542.81 KB, application/zip)
2014-03-04 20:06 PST
,
Build Bot
no flags
Details
Archive of layout-test-results from webkit-ews-07 for mac-mountainlion
(597.89 KB, application/zip)
2014-03-04 20:39 PST
,
Build Bot
no flags
Details
Archive of layout-test-results from webkit-ews-10 for mac-mountainlion-wk2
(460.76 KB, application/zip)
2014-03-04 21:10 PST
,
Build Bot
no flags
Details
Patch
(9.10 KB, patch)
2014-03-04 21:58 PST
,
alan
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-08 for mac-mountainlion
(542.00 KB, application/zip)
2014-03-04 22:33 PST
,
Build Bot
no flags
Details
Archive of layout-test-results from webkit-ews-15 for mac-mountainlion-wk2
(457.88 KB, application/zip)
2014-03-05 00:55 PST
,
Build Bot
no flags
Details
Patch
(9.28 KB, patch)
2014-03-05 08:03 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(6)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2014-03-03 20:47:34 PST
Created
attachment 225736
[details]
test
alan
Comment 2
2014-03-04 12:02:37 PST
Created
attachment 225802
[details]
Patch
Simon Fraser (smfr)
Comment 3
2014-03-04 12:09:29 PST
Comment on
attachment 225802
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=225802&action=review
> LayoutTests/fast/repaint/hidpi-absolute-positioned-element-wrong-cliprect-after-move.html:39 > + setTimeout(move, 100);
100ms per test is way too much.
alan
Comment 4
2014-03-04 19:03:15 PST
Created
attachment 225842
[details]
Patch
Build Bot
Comment 5
2014-03-04 20:06:03 PST
Comment on
attachment 225842
[details]
Patch
Attachment 225842
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/5533610027253760
New failing tests: fast/repaint/hidpi-absolute-positioned-element-wrong-cliprect-after-move.html
Build Bot
Comment 6
2014-03-04 20:06:06 PST
Created
attachment 225847
[details]
Archive of layout-test-results from webkit-ews-02 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-02 Port: mac-mountainlion Platform: Mac OS X 10.8.5
alan
Comment 7
2014-03-04 20:09:06 PST
(In reply to
comment #5
)
> (From update of
attachment 225842
[details]
) >
Attachment 225842
[details]
did not pass mac-ews (mac): > Output:
http://webkit-queues.appspot.com/results/5533610027253760
> > New failing tests: > fast/repaint/hidpi-absolute-positioned-element-wrong-cliprect-after-move.html
It needs
bug 129712
to be able to print non-integral positions.
Build Bot
Comment 8
2014-03-04 20:39:20 PST
Comment on
attachment 225842
[details]
Patch
Attachment 225842
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/4994223438823424
New failing tests: fast/repaint/hidpi-absolute-positioned-element-wrong-cliprect-after-move.html
Build Bot
Comment 9
2014-03-04 20:39:24 PST
Created
attachment 225849
[details]
Archive of layout-test-results from webkit-ews-07 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-07 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Build Bot
Comment 10
2014-03-04 21:10:49 PST
Comment on
attachment 225842
[details]
Patch
Attachment 225842
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/5766389033861120
New failing tests: fast/repaint/hidpi-absolute-positioned-element-wrong-cliprect-after-move.html
Build Bot
Comment 11
2014-03-04 21:10:54 PST
Created
attachment 225852
[details]
Archive of layout-test-results from webkit-ews-10 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-10 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
alan
Comment 12
2014-03-04 21:58:00 PST
Created
attachment 225855
[details]
Patch resubmit to test against trunk with the dependency added.
Build Bot
Comment 13
2014-03-04 22:33:28 PST
Comment on
attachment 225855
[details]
Patch
Attachment 225855
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/5928469556887552
New failing tests: fast/repaint/hidpi-absolute-positioned-element-wrong-cliprect-after-move.html
Build Bot
Comment 14
2014-03-04 22:33:31 PST
Created
attachment 225857
[details]
Archive of layout-test-results from webkit-ews-08 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-08 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Build Bot
Comment 15
2014-03-05 00:55:28 PST
Comment on
attachment 225855
[details]
Patch
Attachment 225855
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/6114152166719488
New failing tests: fast/repaint/hidpi-absolute-positioned-element-wrong-cliprect-after-move.html
Build Bot
Comment 16
2014-03-05 00:55:32 PST
Created
attachment 225869
[details]
Archive of layout-test-results from webkit-ews-15 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-15 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
alan
Comment 17
2014-03-05 08:03:26 PST
Created
attachment 225885
[details]
Patch
WebKit Commit Bot
Comment 18
2014-03-05 10:06:09 PST
Comment on
attachment 225885
[details]
Patch Clearing flags on attachment: 225885 Committed
r165113
: <
http://trac.webkit.org/changeset/165113
>
WebKit Commit Bot
Comment 19
2014-03-05 10:06:14 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug